--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 
 
-    <script src="fetch.js"></script>
+    <!-- <script src="localStorage.js"></script> -->
+    <!-- <script src="sessionStorage.js"></script> -->
+    <!-- <script src="cookie.js"></script> -->
+    
 </body>
 </html>
